--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algorithms",
+  "name": "data-structure-and-algos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +7,17 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "standard": "^17.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^1.4.0"
+  },
+  "eslintConfig": {
+    "extends":["standard"]
   }
 }
