--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "jest": "^29.7.0",
