--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
     "test": "vitest",
     "lint": "eslint ."
   },
   "devDependencies": {
-    "jest": "^29.7.0",
     "standard": "^17.1.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vitest": "^1.4.0"
+    "vitest": "^1.6.0"
   },
   "eslintConfig": {
-    "extends":["standard"]
+    "extends": [
+      "standard"
+    ]
+  },
+  "dependencies": {
+    "eslint": "^9.2.0"
   }
 }
