chore: added test as global

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "globals": [
       "expect",
       "it",
-      "describe"
+      "describe",
+      "test"
     ],
     "plugins": [
       "html"
