--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "^9.2.0",
     "standard": "^17.1.0",
     "vitest": "^1.6.0"
   },
