--- a/package.json
+++ b/package.json
@@ -1,39 +1,28 @@
 {
-  "name": "data-structure-and-algos",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "test": "vitest",
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.4.0",
-    "eslint": "^9.2.0",
-    "standard": "^17.1.0",
-    "vitest": "^1.6.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "node_modules/eslint-config-standard/.eslintrc.json"
-    ]
-  },
-  "dependencies": {
-    "eslint": "^9.2.0"
-  },
-  "standard": {
-    "globals": [
-      "expect",
-      "it",
-      "describe",
-      "test"
-    ],
-    "plugins": [
-      "html"
-    ],
-    "parser": "babel-eslint",
-    "rules": {
-      "no-undef": "off"
-    }
-  }
+	"name": "data-structure-and-algos",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"test": "vitest",
+		"lint": "eslint ."
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.4.0",
+		"eslint": "^9.2.0",
+		"standard": "^17.1.0",
+		"vitest": "^1.6.0"
+	},
+	"eslintConfig": {
+		"extends": ["node_modules/eslint-config-standard/.eslintrc.json"]
+	},
+	"standard": {
+		"globals": ["expect", "it", "describe", "test"],
+		"plugins": ["html"],
+		"parser": "babel-eslint",
+		"rules": {
+			"no-undef": "off"
+		}
+	},
+	"packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
